--- a/Django/templates/navbar.html
+++ b/Django/templates/navbar.html
@@ -1,7 +1,7 @@
 <!-- 네비게이션바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'preonboard:index' %}">Preonboard 사전과제 황준혁</a>
+        <a class="navbar-brand" href="{% url 'preonboard:index' %}">Preonboard 사전과제 </a>
         <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent"
@@ -25,6 +25,8 @@
                     <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
                     {% endif %}
                 </li>
+
+                <a class="nav-link" href="https://github.com/Blaze-F/wanted-pre-onboarding-backend/blob/main/README.md">to Github</a>
             </ul>
         </div>
     </div>
