--- a/Django/templates/preonboard/job_opening_form.html
+++ b/Django/templates/preonboard/job_opening_form.html
@@ -7,7 +7,7 @@
         <h5 class="my-3 border-bottom pb-2">기업등록</h5>
         {{ Company_form.as_p }}
         <h5 class="my-3 border-bottom pb-2">공고등록</h5>
-        {{ Job_form.as_p }}
+        {{ job_form.as_p }}
         <button type="submit" class="btn btn-primary">등록하기</button>
     </form>
 </div>
