--- a/Django/templates/navbar.html
+++ b/Django/templates/navbar.html
@@ -19,12 +19,13 @@
                     <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
                     {% endif %}
                 </li>
-                    <a class="nav-link" href="{% url 'preonboard:apply_list'%}">{{ user.username }} 님의 지원목록</a>
+                    <a class="nav-link" href="{% url 'preonboard:index' %}">{{ user.username }} 님의 지원목록</a>
                 <li>
                     {% if not user.is_authenticated %}
                     <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
                     {% endif %}
                 </li>
+
                 <a class="nav-link" href="https://github.com/Blaze-F/wanted-pre-onboarding-backend/blob/main/README.md">to Github</a>
             </ul>
         </div>
